--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h2>Pressure Washing Doncaster</h2>
 <p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
 <a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
-<div>
 <p>Looking to restore your driveway, patio, or outdoor surfaces? Our
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
 title="Driveway pressure washing in Doncaster">
@@ -144,7 +143,11 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2>Guttering Services Doncaster</h2>
 <p>Guttering services are essential for protecting your home from water damage. Over time, gutters can fill with leaves, moss and debris, stopping rainwater from flowing away properly. Cleaning and clearing your gutters helps prevent blockages, leaks and overflowing that can damage walls, roofs and foundations. If your gutters are leaking, sagging or broken, repairs can restore them before bigger problems develop. In cases where gutters are badly damaged or outdated, full replacement gives your home a fresh, reliable system that works efficiently. Regular gutter maintenance keeps rainwater under control, protects your property, and saves money by avoiding costly structural repairs later on.</p>
 <a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Grab an instant quote for our guttering services">📝 Instant Guttering Quotes</a>
-<div>
+<p>Need guttering cleared, washed, repaired or replaced? Our
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional full guttering services,
+</a> covering Doncaster and surrounding areas.</p>
 <img src="/images/cleaned-gutters-before-after.webp"
 alt="Guttering services in Doncaster including cleaning, clearing, repairs and full gutter replacement for homes"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
