--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Guttering services are essential for protecting your home from water damage. Over time, gutters can fill with leaves, moss and debris, stopping rainwater from flowing away properly. Cleaning and clearing your gutters helps prevent blockages, leaks and overflowing that can damage walls, roofs and foundations. If your gutters are leaking, sagging or broken, repairs can restore them before bigger problems develop. In cases where gutters are badly damaged or outdated, full replacement gives your home a fresh, reliable system that works efficiently. Regular gutter maintenance keeps rainwater under control, protects your property, and saves money by avoiding costly structural repairs later on.</p>
 <a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Grab an instant quote for our guttering services">📝 Instant Guttering Quotes</a>
 <p>Need guttering cleared, washed, repaired or replaced? Our
-<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
-title="Driveway pressure washing in Doncaster">
+<a href="https://homerepairs4u.com/guttering-services/doncaster.html"
+title="Gutters cleared, cleaned, repaired, and replaced in Doncaster">
 professional full guttering services,
 </a> covering Doncaster and surrounding areas.</p>
 <img src="/images/cleaned-gutters-before-after.webp"
