--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -150,7 +150,7 @@ alt="Gutter clearing service in Doncaster removing leaves and debris safely">
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}"/>
 </section>
 
 <!-- Section 2 -->
