--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -172,7 +172,8 @@ alt="Fascia and gutter cleaning in Doncaster improving appearance and drainage">
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt); }"
+/>
 </section>
 
 <!-- Section 3 -->
