--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -168,7 +168,7 @@ Regular fascia and gutter cleaning helps Doncaster properties stay attractive, f
 </p>
 
 <img src="/images/cleaned-gutters-before-after.webp"
-alt="Fascia and gutter cleaning in Doncaster improving appearance and drainage">
+alt="Fascia and gutter cleaning in Doncaster improving appearance and drainage"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
