--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -211,7 +211,7 @@ Local gutter replacement services in Doncaster focus on careful removal, precise
 Gutter replacement offers Doncaster properties improved drainage, modern appearance, and reduced maintenance demands, ensuring reliable guttering performance through changing weather conditions.
 </p>
 <img src="/images/gutter-replacement.webp"
-alt="Gutter replacement service in Doncaster with modern guttering installation">
+alt="Gutter replacement service in Doncaster with modern guttering installation"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
