--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
@@ -12,123 +10,39 @@
 <meta name="description" content="Need reliable guttering in Doncaster? Get fast clearing, cleaning, repairs, or replacement with an instant online quote. Book today for trusted local service.">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
-h1 {
-font-size: 2em; /* adjusts size for readability */
-text-align: center;
-margin-bottom: 20px;
-} 
-/* HEADER STYLING */
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #27ae60;
-}
-
-.logo{
-max-height:90px;
-width:auto;
-}
-
-/* CALL BUTTON */
-.call-btn{
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#000;
-color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-}
-.call-btn:hover{
-background:#333;
-color:#fff;
-}
-
-/* FOOTER */
-.site-footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:25px 15px;
-margin-top:40px;
-font-size:14px;
-}
-
-.footer-services{
-background-color: black;
-padding: 20px;
-text-align: center;
-margin-top: 15px;
-}
-
-.footer-services a{
-color: white;
-margin: 0 10px;
-}
- /* LIGHTBOX STYLING */
-.lightbox {
-display: none; /* Hidden by default */
-position: fixed; /* Stay in place */
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
-justify-content: center; /* Center the image horizontally */
-align-items: center; /* Center the image vertically */
-z-index: 9999; /* On top of everything */
-cursor: pointer; /* Click to close */
-flex-direction: column; /* For image + close button vertically */
-}
-
-.lightbox img {
-max-width: 90%;
-max-height: 90%;
-box-shadow: 0 0 20px rgba(0,0,0,0.5);
-}
-
-.lightbox span {
-position: absolute;
-top: 20px;
-right: 30px;
-color: white;
-font-size: 40px;
-font-weight: bold;
-cursor: pointer;
-user-select: none;
-}
-.header-buttons {
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 10px;
-}
+h1 { font-size: 2em; text-align: center; margin-bottom: 20px; }
+header{ text-align:center; padding:25px 10px; background:#fff; border-bottom:4px solid #27ae60; }
+.logo{ max-height:90px; width:auto; }
+.call-btn{ display:inline-block; margin-top:18px; padding:14px 28px; background:#000; color:#fff; font-size:19px; text-decoration:none; font-weight:bold; border-radius:6px; border:2px solid #000; }
+.call-btn:hover{ background:#333; color:#fff; }
+.site-footer{ background:#000; color:#fff; text-align:center; padding:25px 15px; margin-top:40px; font-size:14px; }
+.footer-services{ background-color: black; padding: 20px; text-align: center; margin-top: 15px; }
+.footer-services a{ color: white; margin: 0 10px; }
+.lightbox { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); justify-content: center; align-items: center; z-index: 9999; cursor: pointer; flex-direction: column; }
+.lightbox img { max-width: 90%; max-height: 90%; box-shadow: 0 0 20px rgba(0,0,0,0.5); }
+.lightbox span { position: absolute; top: 20px; right: 30px; color: white; font-size: 40px; font-weight: bold; cursor: pointer; user-select: none; }
+.header-buttons { display: flex; flex-direction: column; align-items: center; gap: 10px; }
 </style>
- 
-<!-- ✅ HEADER -->
+</head>
+<body>
+
+<!-- HEADER -->
 <header>
 <img src="/images/home-repairs-4u-doncaster.webp"
 alt="Home Repairs 4U logo"
 class="logo"
 width="600" height="200"
 loading="eager">
-
 <div style="text-align:center; margin-top:10px;">
 <a href="https://steely1968.github.io/"
 style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 <a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Instant guttering service quotes">📝 Instant Gutter Service Quotes</a>
 </header>
 
- <!-- ✅ MAIN CONTENT -->
+<!-- MAIN CONTENT -->
 <main style="max-width:1200px; margin:30px auto; padding:0 15px;">
 
 <!-- Section 1 -->
@@ -144,13 +58,12 @@ Local gutter clearing services in Doncaster focus on safe access, thorough debri
 <p>
 Routine gutter clearing protects Doncaster homes from avoidable water damage, keeps drainage working efficiently, and supports the lifespan of existing guttering systems. It is a simple, effective step toward reliable property protection.
 </p>
-
 <img src="/images/gutter-clearing.webp"
-alt="Gutter clearing service in Doncaster removing leaves and debris safely">
+alt="Gutter clearing service in Doncaster removing leaves and debris safely"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}"/>
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt);}"/>
 </section>
 
 <!-- Section 2 -->
@@ -166,14 +79,12 @@ Specialist gutter cleaning in Doncaster uses controlled water pressure and suita
 <p>
 Regular fascia and gutter cleaning helps Doncaster properties stay attractive, functional, and protected. Combined with gutter clearing and repairs, it forms an essential part of complete guttering maintenance for lasting results and reliable drainage performance.
 </p>
-
 <img src="/images/cleaned-gutters-before-after.webp"
 alt="Fascia and gutter cleaning in Doncaster improving appearance and drainage"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt); }"
-/>
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt);}"/>
 </section>
 
 <!-- Section 3 -->
@@ -194,7 +105,7 @@ alt="Gutter repairs in Doncaster fixing leaks and damaged joints"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt);}"/>
 </section>
 
 <!-- Section 4 -->
@@ -215,7 +126,7 @@ alt="Gutter replacement service in Doncaster with modern guttering installation"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt);}"/>
 </section>
 
 <!-- Section 5 -->
@@ -230,27 +141,25 @@ If you are looking for dependable guttering services in Doncaster, now is the ti
 <img id="lightboxImg" src="" alt="">
 </div>
 <img src="/images/gutter-alignment.webp"
-alt="Local guttering services in Doncaster with instant online quote option">
+alt="Local guttering services in Doncaster with instant online quote option"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt);}"/>
 </section>
 
-<!-- ✅ BOTTOM CALL BUTTON -->
+<!-- BOTTOM CALL BUTTON -->
 <div style="text-align:center; margin:40px 0;">
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </div>
 
 </main>
 
-<!-- ✅ FOOTER -->
+<!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
-
-
 </footer>
- 
+
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -277,35 +186,27 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
-"dayOfWeek": [
-"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-],
+"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
 "opens": "00:00",
 "closes": "23:59"
 }
 ],
-"sameAs": [
-"https://www.facebook.com/profile.php?id=61584395621256"
-]
+"sameAs": ["https://www.facebook.com/profile.php?id=61584395621256"]
 }
 </script>
 
-<!-- ✅ LIGHTBOX SCRIPT -->
+<!-- LIGHTBOX SCRIPT -->
 <script>
 function openLightbox(src, alt){
 const lightbox = document.getElementById("lightbox");
 const lightboxImg = document.getElementById("lightboxImg");
-
-lightbox.style.display = "flex"; // show lightbox
-lightboxImg.src = src; // set the image
-lightboxImg.alt = alt; // ✅ set alt dynamically
+lightbox.style.display = "flex";
+lightboxImg.src = src;
+lightboxImg.alt = alt;
 }
-
 function closeLightbox(){
 document.getElementById("lightbox").style.display = "none";
 }
-
-// Optional: close lightbox with Esc key
 document.addEventListener('keydown', function(event) {
 const lightbox = document.getElementById('lightbox');
 if (event.key === "Escape" && lightbox.style.display === "flex") {
