--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -100,7 +100,7 @@ Experienced gutter repair services in Doncaster begin with careful inspection an
 <p>
 Reliable gutter repairs protect Doncaster properties from water damage, maintain efficient drainage, and support long term guttering performance without unnecessary replacement or avoidable expense.
 </p>
-<img src="/images/gutters-repairs.webp"
+<img src="/images/gutter-repairs.webp"
 alt="Gutter repairs in Doncaster fixing leaks and damaged joints"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
