--- a/test-gut.html
+++ b/test-gut.html
@@ -140,11 +140,11 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p></p>
 
 <img src="/images/gutter-clearing.webp"
-alt=""
+alt="ok"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}"/>
 </section>
 
 <!-- Section 2 -->
