--- a/test-gut.html
+++ b/test-gut.html
@@ -144,7 +144,7 @@ alt="ok"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}"/>
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
 
 <!-- Section 2 -->
