--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -190,6 +190,11 @@ input:invalid { border-color:red; background:#ffe6e6; }
 </a>
 </div>
 
+<p>
+We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
+To get a quote specifically for gutter cleaning or maintenance in Doncaster, visit our
+<a href="https://homerepairs4u.com/guttering-services/doncaster.html" title="Professional Gutter Cleaning Services in Doncaster">Gutter Cleaning Service page</a>.
+</p>  
 
 </main>
 
