--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -138,7 +138,7 @@ If y are lookinoug for dependable guttering services in Doncaster, now is the ti
 </p>
 <p>
 We also provide a full range of exterior cleaning services alongside our guttering work. If you’re looking for professional pressure washing for driveways, patios, or paths,you can get an instant price on our
-<a href="/instant-quote.html" title="Instant Quote for Pressure Washing Services">
+<a href="/quote-calculator/pressure-washing.html" title="Instant Quote for Pressure Washing Services">
 Pressure Washing Instant Quote page</a>.
 </p>
 <div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
